syntax = "proto3";
package ddeedsix.customchain.nameservice;

import "gogoproto/gogo.proto";
import "nameservice/params.proto";
import "nameservice/bind.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/dDee-D-six/custom-chain/x/nameservice/types";

// GenesisState defines the nameservice module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Bind bindList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
